added script file for project

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="language" content="no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta content="yes" name="apple-touch-fullscreen" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="dark light">
     <title>Title</title>
+    <script src="javascript/script.js" type="text/javascript" defer></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <h1>hello</h1>
-    <h1 class="title">hello</h1>
-    <h1 class="title-smooth">hello</h1>
+    <h1>hello world</h1>
+    <h1 class="title">hello world</h1>
+    <h1 class="title-smooth">hello world</h1>
 </body>
 </html>
