added header and animation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="language" content="no">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -8,14 +9,25 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="color-scheme" content="dark light">
+    <!-- Info -->
     <title>Title</title>
+    <!-- Scripts -->
     <script src="javascript/script.js" type="text/javascript" defer></script>
+    <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <h1>hello world</h1>
-    <h1 class="title">hello world</h1>
-    <h1 class="title-smooth">hello world</h1>
+    <header class="header">
+        <div class="header-inner">
+            <div class="header-inner-title">
+                <h1 class="header-inner-title-inner"><span>Hello&nbsp</span><span class="ht-outlined">world</span></h1>
+            </div>
+            <div class="header-inner-overlay"></div>
+            <img class="header-background" src="https://images.unsplash.com/photo-1653244984540-1fcc60db4b1b?auto=format&fit=crop&q=80&w=1974&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+        </div>
+    </header>
+    <main>
+
+    </main>
 </body>
 </html>
