--- a/index.html
+++ b/index.html
@@ -20,14 +20,30 @@
     <header class="header">
         <div class="header-inner">
             <div class="header-inner-title">
-                <h1 class="header-inner-title-inner"><span>Hello&nbsp</span><span class="ht-outlined">world</span></h1>
+                <h1 class="header-inner-title-inner"><span>“Hello&nbsp</span><span class="ht-outlined">world”</span></h1>
             </div>
             <div class="header-inner-overlay"></div>
-            <img class="header-background" src="https://images.unsplash.com/photo-1653244984540-1fcc60db4b1b?auto=format&fit=crop&q=80&w=1974&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <img class="header-background" src="https://images.unsplash.com/photo-1553544260-f87e671974ee?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
         </div>
+        <img class="header-background-blur" src="https://images.unsplash.com/photo-1553544260-f87e671974ee?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
     </header>
-    <main>
-
+    <main class="main">
+        <article class="article view-width">
+            <section class="article-content">
+                <h1 class="article-title title-smooth">Lorem ipsum</h1>
+                <div class="article-quote">
+                    <p class="article-quote-statement">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+                    <p class="article-quote-author">&middot John Doe, Linda Scott</p>
+                </div>
+                <p class="article-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </section>
+            <section class="article-media">
+                <div class="article-media-container">
+                    <img class="article-media-container-image" src="https://images.unsplash.com/photo-1614162692292-7ac56d7f7f1e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+                    <img class="article-media-container-image-blur" src="https://images.unsplash.com/photo-1614162692292-7ac56d7f7f1e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+                </div>
+            </section>
+        </article>
     </main>
 </body>
 </html>
