added video and elements

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <header class="header">
         <div class="header-inner">
             <div class="header-inner-title">
-                <h1 class="header-inner-title-inner"><span>“Hello&nbsp</span><span class="ht-outlined">world”</span></h1>
+                <h1 class="header-inner-title-inner"><span>“Porsche&nbsp</span><span class="ht-outlined">911”</span></h1>
             </div>
             <div class="header-inner-overlay"></div>
-            <img class="header-background" src="https://images.unsplash.com/photo-1553544260-f87e671974ee?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+            <img class="header-background" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
         </div>
-        <img class="header-background-blur" src="https://images.unsplash.com/photo-1553544260-f87e671974ee?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+        <img class="header-background-blur" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
     </header>
     <main class="main">
         <article class="article view-width">
@@ -43,6 +43,14 @@
                     <img class="article-media-container-image-blur" src="https://images.unsplash.com/photo-1614162692292-7ac56d7f7f1e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
                 </div>
             </section>
+        </article>
+
+        <article class="article-videoline">
+            <div class="article-videoline-inner">
+                <video class="article-videoline-inner-media" autoplay muted>
+                    <source src="content/Porsche.mp4" type="video/mp4">
+                </video>
+            </div>
         </article>
     </main>
 </body>
