Added articles and hompage with transitions

--- a/index.html
+++ b/index.html
@@ -13,45 +13,45 @@
     <title>Title</title>
     <!-- Scripts -->
     <script src="javascript/script.js" type="text/javascript" defer></script>
+    <script src="javascript/article-list.js" type="text/javascript" defer></script>
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <header class="header">
-        <div class="header-inner">
-            <div class="header-inner-title">
-                <h1 class="header-inner-title-inner"><span>“Porsche&nbsp</span><span class="ht-outlined">911”</span></h1>
-            </div>
-            <div class="header-inner-overlay"></div>
-            <img class="header-background" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
-        </div>
-        <img class="header-background-blur" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
-    </header>
+    <!-- Main -->
     <main class="main">
-        <article class="article view-width">
-            <section class="article-content">
-                <h1 class="article-title title-smooth">Lorem ipsum</h1>
-                <div class="article-quote">
-                    <p class="article-quote-statement">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
-                    <p class="article-quote-author">&middot John Doe, Linda Scott</p>
+        <section class="article-list">
+            <div class="article-list-item" id="article-one">
+                <div class="article-list-item-inner">
+                    <div class="article-list-item-inner-title">
+                        <a class="article-list-item-inner-title-inner" href="article-one.html" data-target="article-one"><span>“Porsche&nbsp</span><span class="ht-outlined">911”</span></a>
+                    </div>
+                    <div class="article-list-item-inner-overlay"></div>
+                    <img class="article-list-item-background" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
                 </div>
-                <p class="article-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </section>
-            <section class="article-media">
-                <div class="article-media-container">
-                    <img class="article-media-container-image" src="https://images.unsplash.com/photo-1614162692292-7ac56d7f7f1e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
-                    <img class="article-media-container-image-blur" src="https://images.unsplash.com/photo-1614162692292-7ac56d7f7f1e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
-                </div>
-            </section>
-        </article>
-
-        <article class="article-videoline">
-            <div class="article-videoline-inner">
-                <video class="article-videoline-inner-media" autoplay muted>
-                    <source src="content/Porsche.mp4" type="video/mp4">
-                </video>
+                <img class="article-list-item-background-blur" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
             </div>
-        </article>
+            <div class="article-list-item" id="article-two">
+                <div class="article-list-item-inner">
+                    <div class="article-list-item-inner-title">
+                        <a class="article-list-item-inner-title-inner" href="article-two.html" data-target="article-two"><span>“New&nbsp</span><span class="ht-outlined">article”</span></a>
+                    </div>
+                    <div class="article-list-item-inner-overlay"></div>
+                    <img class="article-list-item-background" src="https://images.unsplash.com/photo-1553544260-f87e671974ee?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+                </div>
+                <img class="article-list-item-background-blur" src="https://images.unsplash.com/photo-1553544260-f87e671974ee?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+            </div>
+            <div class="article-list-item" id="article-three">
+                <div class="article-list-item-inner">
+                    <div class="article-list-item-inner-title">
+                        <a class="article-list-item-inner-title-inner" href="article-three.html" data-target="article-three"><span>“Flower&nbsp</span><span class="ht-outlined">things”</span></a>
+                    </div>
+                    <div class="article-list-item-inner-overlay"></div>
+                    <img class="article-list-item-background" src="https://images.unsplash.com/photo-1667818139461-7772a11554f9?q=80&w=2062&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+                </div>
+                <img class="article-list-item-background-blur" src="https://images.unsplash.com/photo-1667818139461-7772a11554f9?q=80&w=2062&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+            </div>
+        </section>
     </main>
 </body>
 </html>
