--- a/article-three.html
+++ b/article-three.html
@@ -10,13 +10,39 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Info -->
-    <title>Title</title>
+    <title>Article Three - ASIA</title>
     <!-- Scripts -->
     <script src="javascript/script.js" type="text/javascript" defer></script>
+    <script src="javascript/article.js" type="text/javascript" defer></script>
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar to-index">
+        <div class="navbar-inner view-width">
+            <div class="navbar-inner-logo">
+                <a class="navbar-inner-logo-link" href="index.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 757.93 724.76">
+                        <path d="m347.33,642.83c-16.99-121.98,71.24-335.93-92.25-310.65-9.7,1.5-18.24-6.62-17.26-16.39C257.34,120.89,139.86-28.25,395.69,4.54c6.7.86,12.07,6.03,13.07,12.71,9.3,61.98-47.73,45.08-98.14,45.01-8.34-.01-15.13,6.67-15.22,15-.62,61.96,2.5,123.29-.99,184.38-.46,7.96,5.34,14.88,13.25,15.88,26.46,3.35,56.04-.33,84.73-.05,8.33.08,15.06,6.8,15.06,15.13,0,137.75,0,274.73,0,412.11,0,7.61-5.67,14.05-13.22,15.01-253.83,32.16-134.01-121.09-155.68-314.53-1.01-9.03,6.12-17.04,15.2-16.79,89.49,2.46,24.25,181.34,40.84,257.03.26,1.18.44,2.37.38,3.58-.7,16.81,24.78,15.24,41.41,10.59,7.35-2.06,11.99-9.21,10.93-16.77Z"/>
+                        <path d="m621.43,709.78c-114.08-15.13-18.95-523.35-42.83-686.55-1.34-9.14,5.71-17.34,14.95-17.35,45.65-.02,90.88-.02,136.45-.03,9.17,0,16.29,8.1,14.98,17.18-17.4,120.87,59.94,399.18-36.76,429.44-8.57,2.68-17.55-2.51-19.46-11.29-5.89-27.03-.33-59.21-.6-88.34-.09-9.8-9.31-17.02-18.8-14.58-79.85,20.52-16.41,263.45-31.27,358.87-1.25,8-8.63,13.72-16.66,12.65Zm33.17-429.53c67.89-4.32,21.81-135.56,30.77-199.93.94-6.75-2.58-13.36-8.82-16.12-68.64-30.28-37.79,136.23-38.14,200.95-.05,8.77,7.43,15.65,16.19,15.09Z"/>
+                        <path d="m67.09,354.27c-1.82,28.41,11.06,72.79-1.67,92.66-4.28,6.67-13.18,8.64-20.06,4.7C-45.11,399.77,30.88,152.39,12.66,23.25c-1.29-9.13,5.72-17.31,14.95-17.32,46.11-.01,92.43-.02,140-.02,8.35,0,15.12,6.77,15.12,15.12-.03,184.55-.12,369.11-.26,553.66,0,1.12-.15,2.23-.37,3.32-7.4,35.46,15.87,117.86-9.53,137.85-2.32,1.83-5.19,2.87-8.14,3.04-123.53,7.43,42.63-408.95-85.76-378.31-6.43,1.53-11.15,7.07-11.57,13.66Zm52.37-92.21c-6.55-69.13,37.04-195.59-32.61-198.44-9.14-.37-16.55,7.39-15.69,16.5,6.55,68.77-37.24,195.53,32.58,198.42,9.14.38,16.57-7.37,15.71-16.48Z"/>
+                        <path d="m522.02,27.3c-.21,227.54-.25,454.93-.1,682.48,0,7.11-4.88,13.57-11.89,14.78-89.44,15.47-69.73-860.67,10.35-704.13,1.09,2.12,1.64,4.49,1.64,6.87Z"/>
+                        <path d="m734.95,720.22c-82.87,8.11-38.88-114.49-44.24-185.89-.66-8.8,6.23-16.33,15.06-16.33,9.04,0,18.2,0,27.5,0,8.35,0,15.13,6.77,15.13,15.12v172.07c0,7.7-5.78,14.28-13.45,15.03Z"/>
+                        <path d="m26.03,515.17c77.38-3.79,33.31,119.06,39.73,188.54.79,8.52-5.83,15.91-14.38,16.34-77.38,3.86-33.39-118.71-39.79-188.5-.78-8.55,5.86-15.96,14.44-16.38Z"/>
+                        <path d="m68.75,343.65c.62-2.21,1.23-4.42,1.85-6.64-.62,2.21-1.23,4.42-1.85,6.64Z"/>
+                        <path d="m296.72,278.04c-1.06-1.04-2.11-2.07-3.17-3.11,1.06,1.04,2.11,2.07,3.17,3.11Z"/>
+                        <path d="m349.26,654.1c-.47,1.51-.94,3.01-1.42,4.52.47-1.51.94-3.01,1.42-4.52Z"/>
+                        <path d="m635.54,709.29c.06-1.57.11-3.14.17-4.71-.06,1.57-.11,3.14-.17,4.71Z"/>
+                        <path d="m463.7,7.33c-.09.94-.19,1.88-.28,2.82.09-.94.19-1.88.28-2.82Z"/>
+                        <path d="m522.03,23.77c.05-.89.1-1.78.16-2.67-.05.89-.1,1.78-.16,2.67Z"/>
+                        <path d="m636.06,277.17c.51.63,1.03,1.25,1.54,1.88-.51-.63-1.03-1.25-1.54-1.88Z"/>
+                    </svg>
+                </a>
+            </div>
+            <div class="navbar-inner-items"></div>
+        </div>
+    </nav>
     <!-- Header -->
     <header class="header">
         <div class="header-inner">
