--- a/article-three.html
+++ b/article-three.html
@@ -40,7 +40,24 @@
                     </svg>
                 </a>
             </div>
-            <div class="navbar-inner-items"></div>
+            <div class="navbar-inner-items">
+                <ul class="navbar-inner-items-list">
+                    <li class="navbar-inner-items-list-item">
+                        <input class="navbar-inner-items-list-item-link" type="text" placeholder="Search" aria-label="">
+                        <div class="navbar-inner-items-list-item-search">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+                                <title>Search</title>
+                                <g id="search-ico-outer" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+                                    <g id="search-ico" transform="translate(2.000000, 2.000000)" stroke="#ffffff" stroke-width="1.5">
+                                        <path d="M9.27542857,0.714285714 C14.0030476,0.714285714 17.836381,4.54666667 17.836381,9.2752381 C17.836381,14.0038095 14.0030476,17.8361905 9.27542857,17.8361905 C4.54685714,17.8361905 0.71447619,14.0038095 0.71447619,9.2752381 C0.71447619,4.54666667 4.54685714,0.714285714 9.27542857,0.714285714 Z" id="Stroke-1"/>
+                                        <path d="M17.8989524,16.487619 C18.678,16.487619 19.3094286,17.12 19.3094286,17.8980952 C19.3094286,18.6780952 18.678,19.3095238 17.8989524,19.3095238 C17.1199048,19.3095238 16.4875238,18.6780952 16.4875238,17.8980952 C16.4875238,17.12 17.1199048,16.487619 17.8989524,16.487619 Z" id="Stroke-3"/>
+                                    </g>
+                                </g>
+                            </svg>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!-- Header -->
