--- a/article-one.html
+++ b/article-one.html
@@ -130,6 +130,7 @@
         <h2 class="other-article-title">More Articles</h2>
         <div class="other-article-list">
             <div class="other-article-list-item" id="article-two">
+                <a class="other-article-list-item-link" href="article-two.html"></a>
                 <div class="other-article-list-item-inner">
                     <div class="other-article-list-item-inner-title">
                         <a class="other-article-list-item-inner-title-inner" href="article-two.html" data-target="article-two"><span>“New&nbsp</span><span class="ht-outlined">article”</span></a>
@@ -140,6 +141,7 @@
                 <img class="other-article-list-item-background-blur" src="https://images.unsplash.com/photo-1553544260-f87e671974ee?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
             </div>
             <div class="other-article-list-item" id="article-three">
+                <a class="other-article-list-item-link" href="article-three.html"></a>
                 <div class="other-article-list-item-inner">
                     <div class="other-article-list-item-inner-title">
                         <a class="other-article-list-item-inner-title-inner" href="article-three.html" data-target="article-three"><span>“Flower&nbsp</span><span class="ht-outlined">things”</span></a>
