--- a/article-three.html
+++ b/article-three.html
@@ -130,9 +130,10 @@
         <h2 class="other-article-title">More Articles</h2>
         <div class="other-article-list">
             <div class="other-article-list-item" id="article-one">
+                <a class="other-article-list-item-link" href="article-one.html"></a>
                 <div class="other-article-list-item-inner">
                     <div class="other-article-list-item-inner-title">
-                        <a class="other-article-list-item-inner-title-inner" href="article-two.html" data-target="article-one"><span>“Porsche&nbsp</span><span class="ht-outlined">911”</span></a>
+                        <a class="other-article-list-item-inner-title-inner" href="article-one.html" data-target="article-one"><span>“Porsche&nbsp</span><span class="ht-outlined">911”</span></a>
                     </div>
                     <div class="other-article-list-item-inner-overlay"></div>
                     <img class="other-article-list-item-background rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
@@ -140,6 +141,7 @@
                 <img class="other-article-list-item-background-blur" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
             </div>
             <div class="other-article-list-item" id="article-two">
+                <a class="other-article-list-item-link" href="article-two.html"></a>
                 <div class="other-article-list-item-inner">
                     <div class="other-article-list-item-inner-title">
                         <a class="other-article-list-item-inner-title-inner" href="article-two.html" data-target="article-two"><span>“New&nbsp</span><span class="ht-outlined">article”</span></a>
