--- a/index.html
+++ b/index.html
@@ -67,30 +67,30 @@
     <!-- Main -->
     <main class="main">
         <section class="article-list">
-            <div class="article-list-item" id="article-one">
+            <div class="article-list-item" id="article-1">
                 <div class="article-list-item-inner">
                     <div class="article-list-item-inner-title">
-                        <a class="article-list-item-inner-title-inner" href="article-one.html" data-target="article-one"><span>“Porsche&nbsp</span><span class="ht-outlined">911”</span></a>
+                        <a class="article-list-item-inner-title-inner" href="article-one.html" data-target="article-1"><span>“Porsche&nbsp</span><span class="ht-outlined">911”</span></a>
                     </div>
                     <div class="article-list-item-inner-overlay"></div>
                     <img class="article-list-item-background rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
                 </div>
                 <img class="article-list-item-background-blur" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
             </div>
-            <div class="article-list-item" id="article-two">
+            <div class="article-list-item" id="article-2">
                 <div class="article-list-item-inner">
                     <div class="article-list-item-inner-title">
-                        <a class="article-list-item-inner-title-inner" href="article-two.html" data-target="article-two"><span>“New&nbsp</span><span class="ht-outlined">article”</span></a>
+                        <a class="article-list-item-inner-title-inner" href="article-two.html" data-target="article-2"><span>“New&nbsp</span><span class="ht-outlined">article”</span></a>
                     </div>
                     <div class="article-list-item-inner-overlay"></div>
                     <img class="article-list-item-background rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" src="https://images.unsplash.com/photo-1553544260-f87e671974ee?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
                 </div>
                 <img class="article-list-item-background-blur" src="https://images.unsplash.com/photo-1553544260-f87e671974ee?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
             </div>
-            <div class="article-list-item" id="article-three">
+            <div class="article-list-item" id="article-3">
                 <div class="article-list-item-inner">
                     <div class="article-list-item-inner-title">
-                        <a class="article-list-item-inner-title-inner" href="article-three.html" data-target="article-three"><span>“Flower&nbsp</span><span class="ht-outlined">things”</span></a>
+                        <a class="article-list-item-inner-title-inner" href="article-three.html" data-target="article-3"><span>“Flower&nbsp</span><span class="ht-outlined">things”</span></a>
                     </div>
                     <div class="article-list-item-inner-overlay"></div>
                     <img class="article-list-item-background rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" src="https://images.unsplash.com/photo-1667818139461-7772a11554f9?q=80&w=2062&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
