la inn info på article 1

--- a/article-one.html
+++ b/article-one.html
@@ -66,7 +66,7 @@
     <header class="header">
         <div class="header-inner">
             <div class="header-inner-title">
-                <h1 class="header-inner-title-inner"><span>“Porsche&nbsp</span><span class="ht-outlined">911”</span></h1>
+                <h1 class="header-inner-title-inner"><span>“Winners</span><span class="ht-outlined">luck”</span></h1>
             </div>
             <div class="header-inner-overlay"></div>
             <img class="header-background" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
@@ -79,12 +79,12 @@
         <!-- Article 1 -->
         <article class="article view-width">
             <section class="article-content">
-                <h1 class="article-title title-smooth">Lorem ipsum</h1>
+                <h1 class="article-title title-smooth">Vant priser på priser takket være fans</h1>
                 <div class="article-quote">
-                    <p class="article-quote-statement title-smooth">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
-                    <p class="article-quote-author">&middot John Doe, Linda Scott</p>
+                    <p class="article-quote-statement title-smooth">“If you try hard enough, you can achieve anything. Never say you can't. You can do it!”</p>
+                    <p class="article-quote-author">Kim Hongjoong</p>
                 </div>
-                <p class="article-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="article-paragraph">Den Sørkoreanske gruppa ATEEZ hadde sin debut 24. Oktober 2018, og har siden da vunnet en rekke priser på diverse musikk konkurranser takket være sine fans. Gruppa bestående av Hongjoong, Seonghwa, Yunho, Yeosang, San, Mingi, Wooyoung og Jongho har bygd opp en stor mengde med globale fans over ca. 5 år. Sammen med bra utseende, sterke stemmer og diverse talent er det en del faktorer som har spilt inn på gruppas suksess. Lederen Hongjoong mener selv at det er deres diverse opptreder som har spilt inn mest. «Vi har hatt fokus på våre opptreder helt siden begynnelsen, og jeg tror dette aspektet har tiltrukket våre fans» Sier Hongjoong i et intervju på en kafé i Gangnam Distrikt. (Hentet fra The Korea Times, Dong Sun-hwa, 16.11.2023, kl: 17:11)</p>
             </section>
             <section class="article-media">
                 <div class="article-media-container">
@@ -116,11 +116,11 @@
                 <!-- #Empty -->
             </section>
             <section class="article-content">
-                <p class="article-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p class="article-paragraph">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="article-paragraph">Disse diverse musikk konkurransene baserer seg på hovedsakelig to forskjellige ting, for at artistene som deltar skal kunne ha mulighet til å vinne. Det handler nemlig om fan stemmer, og om streams av sangen gruppene deltar med. Stemmesystemet virker slik at fansen må laste ned den tilhørende appen for det showet artisten eller gruppa de heier på er med i. Inne på appen kan man tjene seg opp poeng ved å se på reklamer eller delta i quizer. Med de poengene kan de gi sin favoritt artist en eller flere stemmer. </p>
+                <p class="article-paragraph">Den andre måten går ut på å streame sangen til artisten på plattformer som Spotify, Youtube, iTunes og mer. Her handler det om mengden streams i en viss periode, som blir telt opp til slutt. Det varierer ofte mellom antall stemmer som trengs og antall streams. Noen ganger kan artister komme videre med flere stemmer enn streams, andre ganger er det omvendt.</p>
             </section>
             <section class="article-content">
-                <p class="article-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="article-paragraph">For ATEEZ har det som regel gått bra, hvor fansen har gitt dem nok stemmer og streams til å vinne flere konkurranser. De har vunnet priser fra Golden disc awards, Mnet asian music awards, MTV europe music awards og mange flere. Dette har resultert i gruppas store globale suksess, som fortsatt vokser en dag i dag.</p>
             </section>
         </article>
     </main>
