i prossessen med å legge inn flere bilder

--- a/article-one.html
+++ b/article-one.html
@@ -69,9 +69,9 @@
                 <h1 class="header-inner-title-inner"><span>“Winners</span><span class="ht-outlined">luck”</span></h1>
             </div>
             <div class="header-inner-overlay"></div>
-            <img class="header-background" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+            <img class="header-background" src="images/stage.jpg" alt=" Bilde av en Scene" />
         </div>
-        <img class="header-background-blur" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+        <img class="header-background-blur" src="images/stage.jpg" alt="" />
     </header>
 
     <!-- Main -->
@@ -88,8 +88,8 @@
             </section>
             <section class="article-media">
                 <div class="article-media-container">
-                    <img class="article-media-container-image" src="https://images.unsplash.com/photo-1614162692292-7ac56d7f7f1e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
-                    <img class="article-media-container-image-blur" src="https://images.unsplash.com/photo-1614162692292-7ac56d7f7f1e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+                    <img class="article-media-container-image" src="images/" alt="" />
+                    <img class="article-media-container-image-blur" src="images/" alt="" />
                 </div>
             </section>
         </article>
