--- a/article-one.html
+++ b/article-one.html
@@ -88,8 +88,8 @@
             </section>
             <section class="article-media">
                 <div class="article-media-container">
-                    <img class="article-media-container-image" src="images/" alt="" />
-                    <img class="article-media-container-image-blur" src="images/" alt="" />
+                    <img class="article-media-container-image" src="images/priser.jpg" alt="" />
+                    <img class="article-media-container-image-blur" src="images/priser.jpg" alt="" />
                 </div>
             </section>
         </article>
