la til bilde og fikset opp ting

--- a/article-one.html
+++ b/article-one.html
@@ -94,24 +94,8 @@
             </section>
         </article>
 
-        <!-- Article 2 -->
-        <article class="article-videoline">
-            <div class="article-videoline-inner">
-                <video class="article-videoline-inner-media" autoplay muted>
-                    <source src="content/Porsche.mp4" type="video/mp4">
-                </video>
-            </div>
-        </article>
-
         <!-- Article 3 -->
         <article class="article view-width">
-            <section class="article-content">
-                <h1 class="article-title title-smooth">Lorem ipsum</h1>
-                <div class="article-quote">
-                    <p class="article-quote-statement title-smooth">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
-                    <p class="article-quote-author">&middot John Doe, Linda Scott</p>
-                </div>
-            </section>
             <section class="article-content">
                 <!-- #Empty -->
             </section>
@@ -123,6 +107,18 @@
                 <p class="article-paragraph">For ATEEZ har det som regel gått bra, hvor fansen har gitt dem nok stemmer og streams til å vinne flere konkurranser. De har vunnet priser fra Golden disc awards, Mnet asian music awards, MTV europe music awards og mange flere. Dette har resultert i gruppas store globale suksess, som fortsatt vokser en dag i dag.</p>
             </section>
         </article>
+
+            <!-- Article 2 -->
+        <article class="article-videoline">
+            <!--<div class="article-videoline-inner">
+                <video class="article-videoline-inner-media" autoplay muted>
+                    <source src="content/Porsche.mp4" type="video/mp4">
+                </video>
+                
+            </div>-->
+            <img class="article-media-container-image" src="images/ateez_infografikk.jpg" alt="Infogrphics about ATEEZ" />
+            <img class="article-media-container-image-blur" src="images/ateez_infografikk.jpg" alt="Infographics about ATEEZ" />
+        </article>  
     </main>
 
     <!-- Other Articles -->
