--- a/article-one.html
+++ b/article-one.html
@@ -79,12 +79,12 @@
         <!-- Article 1 -->
         <article class="article view-width">
             <section class="article-content">
-                <h1 class="article-title title-smooth">Vant priser på priser takket være fans</h1>
+                <h1 class="article-title title-smooth">Won several awards thanks to fans.</h1>
                 <div class="article-quote">
                     <p class="article-quote-statement title-smooth">“If you try hard enough, you can achieve anything. Never say you can't. You can do it!”</p>
                     <p class="article-quote-author">Kim Hongjoong</p>
                 </div>
-                <p class="article-paragraph">Den Sørkoreanske gruppa ATEEZ hadde sin debut 24. Oktober 2018, og har siden da vunnet en rekke priser på diverse musikk konkurranser takket være sine fans. Gruppa bestående av Hongjoong, Seonghwa, Yunho, Yeosang, San, Mingi, Wooyoung og Jongho har bygd opp en stor mengde med globale fans over ca. 5 år. Sammen med bra utseende, sterke stemmer og diverse talent er det en del faktorer som har spilt inn på gruppas suksess. Lederen Hongjoong mener selv at det er deres diverse opptreder som har spilt inn mest. «Vi har hatt fokus på våre opptreder helt siden begynnelsen, og jeg tror dette aspektet har tiltrukket våre fans» Sier Hongjoong i et intervju på en kafé i Gangnam Distrikt. (Hentet fra The Korea Times, Dong Sun-hwa, 16.11.2023, kl: 17:11)</p>
+                <p class="article-paragraph">The South Korean group ATEEZ debuted October 24th, 2018. Ever since then, they have won many awards on various music competitions thanks to their fans. The group consisting of Hongjoong, Seonghwa, Yunho, Yeosang, San, Mingi, Wooyoung and Jongho have built up many global fans throughout about 5 years. With a mix of good looks, powerful voices and diverse talent, there are a couple factors that have helped with the group’s success. The leader Hongjoong says himself that their various performances have played a big part. “We have been putting emphasis on our performances from the very beginning, and I think this aspect has appealed to our fans”, He says in an interview in a café in Gangnam District. (Hentet fra The Korea Times, Dong Sun-hwa, 16.11.2023, kl: 17:11)</p>
             </section>
             <section class="article-media">
                 <div class="article-media-container">
@@ -100,11 +100,11 @@
                 <!-- #Empty -->
             </section>
             <section class="article-content">
-                <p class="article-paragraph">Disse diverse musikk konkurransene baserer seg på hovedsakelig to forskjellige ting, for at artistene som deltar skal kunne ha mulighet til å vinne. Det handler nemlig om fan stemmer, og om streams av sangen gruppene deltar med. Stemmesystemet virker slik at fansen må laste ned den tilhørende appen for det showet artisten eller gruppa de heier på er med i. Inne på appen kan man tjene seg opp poeng ved å se på reklamer eller delta i quizer. Med de poengene kan de gi sin favoritt artist en eller flere stemmer. </p>
-                <p class="article-paragraph">Den andre måten går ut på å streame sangen til artisten på plattformer som Spotify, Youtube, iTunes og mer. Her handler det om mengden streams i en viss periode, som blir telt opp til slutt. Det varierer ofte mellom antall stemmer som trengs og antall streams. Noen ganger kan artister komme videre med flere stemmer enn streams, andre ganger er det omvendt.</p>
+                <p class="article-paragraph">The music contests are mainly based on a few things, that give the contestants a chance to win. It is all about fan votes and streams of the songs the artists compete with. The voting system works in a way where, the fans must download an app to the corresponding music contest the artist or group is a part of. In the app you can collect tokens by watching ads, (in some cases) play quizzes, or buy tokens with money. With these tokens, fans can give their favourite artist or group one or more votes.</p>
+                <p class="article-paragraph">The other way to vote, is based on streaming the song your favourite artist or group competes with. You can stream on platforms like Spotify, Youtube, iTunes etc. Here it is about the number of streams a song has got in a certain amount of time. These streams get counted and get added to the scoreboard. Sometimes it varies between streams and votes. Artists and groups can win with more votes than streams, or sometimes more streams than votes.</p>
             </section>
             <section class="article-content">
-                <p class="article-paragraph">For ATEEZ har det som regel gått bra, hvor fansen har gitt dem nok stemmer og streams til å vinne flere konkurranser. De har vunnet priser fra Golden disc awards, Mnet asian music awards, MTV europe music awards og mange flere. Dette har resultert i gruppas store globale suksess, som fortsatt vokser en dag i dag.</p>
+                <p class="article-paragraph">It has mainly been going well for ATEEZ where the fans have given them enough votes and streams to win several competitions. They have won awards on Golden Disc Awards, Mnet Asian Music Awards, MTV Europe Music awards and many more competitions. This has given the group their large global success, which is still growing day by day.</p>
             </section>
         </article>
 
