Added alt text and caption

--- a/article-one.html
+++ b/article-one.html
@@ -69,9 +69,9 @@
                 <h1 class="header-inner-title-inner"><span>“Winners</span><span class="ht-outlined">luck”</span></h1>
             </div>
             <div class="header-inner-overlay"></div>
-            <img class="header-background" src="images/stage.jpg" alt=" Bilde av en Scene" />
+            <img class="header-background" src="images/stage.jpg" alt="Picture of a stage" />
         </div>
-        <img class="header-background-blur" src="images/stage.jpg" alt="" />
+        <img class="header-background-blur" src="images/stage.jpg" alt="Blurred picture of a stage" />
     </header>
 
     <!-- Main -->
@@ -84,12 +84,12 @@
                     <p class="article-quote-statement title-smooth">“If you try hard enough, you can achieve anything. Never say you can't. You can do it!”</p>
                     <p class="article-quote-author">Kim Hongjoong</p>
                 </div>
-                <p class="article-paragraph">The South Korean group ATEEZ debuted October 24th, 2018. Ever since then, they have won many awards on various music competitions thanks to their fans. The group consisting of Hongjoong, Seonghwa, Yunho, Yeosang, San, Mingi, Wooyoung and Jongho have built up many global fans throughout about 5 years. With a mix of good looks, powerful voices and diverse talent, there are a couple factors that have helped with the group’s success. The leader Hongjoong says himself that their various performances have played a big part. “We have been putting emphasis on our performances from the very beginning, and I think this aspect has appealed to our fans”, He says in an interview in a café in Gangnam District. (Hentet fra The Korea Times, Dong Sun-hwa, 16.11.2023, kl: 17:11)</p>
+                <p class="article-paragraph">The South Korean group ATEEZ debuted October 24th, 2018. Ever since then, they have won many awards on various music competitions thanks to their fans. The group consisting of Hongjoong, Seonghwa, Yunho, Yeosang, San, Mingi, Wooyoung and Jongho have built up many global fans throughout about 5 years. With a mix of good looks, powerful voices and diverse talent, there are a couple factors that have helped with the group’s success. The leader Hongjoong says himself that their various performances have played a big part. “We have been putting emphasis on our performances from the very beginning, and I think this aspect has appealed to our fans”, He says in an interview in a café in Gangnam District. (Collected from The Korea Times, Dong Sun-hwa, 16.11.2023, kl: 17:11)</p>
             </section>
             <section class="article-media">
                 <div class="article-media-container">
-                    <img class="article-media-container-image" src="images/priser.jpg" alt="" />
-                    <img class="article-media-container-image-blur" src="images/priser.jpg" alt="" />
+                    <img class="article-media-container-image" src="images/priser.jpg" alt="Picture of awards" />
+                    <img class="article-media-container-image-blur" src="images/priser.jpg" alt="Blurred picture of awards" />
                 </div>
             </section>
         </article>
@@ -117,7 +117,8 @@
                 
             </div>-->
             <img class="article-media-container-image" src="images/ateez_infografikk.jpg" alt="Infogrphics about ATEEZ" />
-            <img class="article-media-container-image-blur" src="images/ateez_infografikk.jpg" alt="Infographics about ATEEZ" />
+            <img class="article-media-container-image-blur" src="images/ateez_infografikk.jpg" alt="Blurred infographics about ATEEZ" />
+            <figcaption>Award icons from vecteezy.com</figcaption>
         </article>  
     </main>
 
