Changed article image, title and alt text

--- a/article-one.html
+++ b/article-one.html
@@ -66,7 +66,7 @@
     <header class="header">
         <div class="header-inner">
             <div class="header-inner-title">
-                <h1 class="header-inner-title-inner"><span>“Winners</span><span class="ht-outlined">luck”</span></h1>
+                <h1 class="header-inner-title-inner"><span>“Winner's</span><span class="ht-outlined">luck”</span></h1>
             </div>
             <div class="header-inner-overlay"></div>
             <img class="header-background" src="images/stage.jpg" alt="Picture of a stage" />
