--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
             <div class="article-list-item" id="article-1">
                 <div class="article-list-item-inner">
                     <div class="article-list-item-inner-title">
-                        <a class="article-list-item-inner-title-inner" href="article-one.html" data-target="article-1"><span>“Porsche&nbsp</span><span class="ht-outlined">911”</span></a>
+                        <a class="article-list-item-inner-title-inner" href="article-one.html" data-target="article-1"><span>“Winner's</span><span class="ht-outlined">luck”</span></a>
                     </div>
                     <div class="article-list-item-inner-overlay"></div>
-                    <img class="article-list-item-background rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+                    <img class="article-list-item-background rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" src="images/stage.jpg" alt="Picture of a stage" />
                 </div>
-                <img class="article-list-item-background-blur" src="https://images.unsplash.com/photo-1632077622353-daeef65ef114?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+                <img class="article-list-item-background-blur" src="images/stage.jpg" alt="Blurred image of a stage" />
             </div>
             <div class="article-list-item" id="article-2">
                 <div class="article-list-item-inner">
